--- a/shared/css/slides.css
+++ b/shared/css/slides.css
@@ -16,6 +16,7 @@ body {
 
 .slides section {
     min-height: 100vh;
+    max-height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -23,6 +24,7 @@ body {
     justify-content: center;
     font-size: 2rem;
     padding: 1rem;
+    overflow-y: scroll;
 }
 
 .slides code {
